--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
 		"autoprefixer": "^10.4.15",
+		"daisyui": "^3.7.4",
 		"postcss": "^8.4.29",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
